tests/sksl/errors/golden/FieldAfterRuntimeArray.glsl
### Compilation failed:

error: 1: only the last entry in an interface block may be a runtime-sized array
1 error
